# mathic

./: CMakeLists.txt  Makefile.am  configure.ac  mathic_1.0~git20130827.orig.tar.gz.delta  mathic_1.0~git20130827.orig.tar.gz.id
debian/: changelog  control  copyright  libmathic-dev.install  libmathic0.install  libmathic0.symbols  libmathic0v5.symbols  rules  watch
debian/patches/: find_gtest.patch  fix_test.patch  fix_typo.patch  link_pthread.patch  series
debian/tests/: build  control
src/: CMakeLists.txt  mathic.cpp  mathic.h
src/mathic/: CliParser.cpp  ComTree.h  DivList.h  DivMask.cpp  Geobucket.h  HashTable.h  PairQueue.h  TourTree.h
src/test/: PairQueue.cpp
